# bip-model-checking

./: README.md
compiler/: README.md
compiler/Compiler/Backend/: .gitattributes
compiler/Compiler/Backend/acceleo.standalone.compiler/: .classpath  .project  build.xml  ivy.xml
compiler/Compiler/Backend/ujf.verimag.bip.backend.aseba/: .classpath  .project  build.xml  ivy.xml
compiler/Compiler/Backend/ujf.verimag.bip.backend.bip/: .classpath  .project  build.acceleo  build.properties  build.xml  ivy.xml
compiler/Compiler/Backend/ujf.verimag.bip.backend.cpp/: .classpath  .project  build.properties  build.xml  ivy.xml
compiler/Compiler/Backend/ujf.verimag.bip.backend.example/: .classpath  .project  build.xml  ivy.xml
compiler/Compiler/Common/: .gitattributes
compiler/Compiler/Frontend/: .gitattributes
compiler/Compiler/Middleend/: .gitattributes
compiler/Documents/: .gitattributes
compiler/Documents/doxygen/: doxyfile
compiler/Documents/sphinx-doc/: Makefile  sync-to-www.sh  topics
compiler/Engines/: .gitattributes
compiler/Engines/model-checker-engine/: CMakeLists.txt
compiler/Engines/multithread-engine/: CMakeLists.txt
compiler/Engines/optimized-engine/: CMakeLists.txt
compiler/Engines/optimized-engine/generic/include/: AtomInternalPortItf.hpp  AtomItf.hpp  ComponentItf.hpp  InteractionItf.hpp  InteractionValueItf.hpp  IntervalItf.hpp  NonDeterministicPetriNetErrorItf.hpp  PortValueItf.hpp  bip-engineiface-config.hpp
compiler/Engines/optimized-engine/generic/src/: AtomInvariantViolationErrorItf.cpp  AtomItf.cpp  ConnectorExportPortItf.cpp  ConnectorItf.cpp  InteractionItf.cpp  IntervalItf.cpp  PortItf.cpp
compiler/Engines/optimized-engine/specific/include/: Atom.hpp  AtomExportData.hpp  AtomExportPort.hpp  AtomExternalPort.hpp  AtomInternalPort.hpp  Component.hpp  Compound.hpp  CompoundExportPort.hpp  Connector.hpp  ConnectorExportPort.hpp  CycleInPriorities.hpp  CycleInPrioritiesError.hpp  Engine.hpp  Interaction.hpp  InteractionValue.hpp  Interval.hpp  Launcher.hpp  ModelClock.hpp  Port.hpp  PortValue.hpp  Priority.hpp  QuotedPortReference.hpp  RandomScheduler.hpp  RealTimeClock.hpp  ReferenceEngine.hpp  Resetable.hpp  Scheduler.hpp  State.hpp  StringTree.hpp  TimeValue.hpp
compiler/Engines/optimized-engine/specific/src/: Atom.cpp  AtomExportData.cpp  AtomExportPort.cpp  AtomExternalPort.cpp  AtomInternalPort.cpp  Clock.cpp  Component.cpp  Compound.cpp  CompoundExportData.cpp  CompoundExportPort.cpp  Connector.cpp  ConnectorExportPort.cpp  CycleInPriorities.cpp  Engine.cpp  Interaction.cpp  InteractionValue.cpp  Interval.cpp  Launcher.cpp  Logger.cpp  ModelClock.cpp  PortValue.cpp  Priority.cpp  QuotedPortReference.cpp  RandomScheduler.cpp  RealTimeClock.cpp  ReferenceEngine.cpp  Resetable.cpp  Scheduler.cpp  State.cpp  TimeSafetyViolationError.cpp  TimingConstraint.cpp  UnexpectedEventError.cpp
compiler/Engines/optimized-engine/tests/lib/shunit2/: shunit2
compiler/Engines/optimized-engine/tests/src/compile_only_tests/: conflict_component_prio.bip  conflict_packages.bip  conflict_packages2.bip  modulo8.bip  periodic_tick.bip  priorities_wildcard.bip  priority_rules_atom_cycle.bip  priority_rules_atom_cycle2.bip
compiler/Engines/optimized-engine/tests/src/running_tests/: broadcast_browser.bip  broadcast_up.bip  const_data.bip  cyclic.bip  demosaicing9.bip  dining_philo.bip  doublecounter2.bip  external.bip  invariants.bip  invariants2.bip  maximal_progress_hierarchy.bip  priority_rules.bip  priority_rules_atom_export.bip  priority_rules_cycle3.bip  priority_rules_guard.bip  priority_rules_guard_external.bip  priority_rules_no_cycle2.bip  priority_rules_no_cycle3.bip  simple10counter.bip  tempcontrol-print.cpp  tempcontrol-print.hpp  time_lock1.bip
compiler/Engines/optimized-engine/tests/src/running_tests/demosaicing/: raw_data_28.h  raw_data_648.h  timeout.h
compiler/Engines/optimized-engine/tests/tests/: all.sh  compileOnlyTests.sh  performanceTests.sh  runningTests.sh
compiler/Engines/reference-engine/: CMakeLists.txt  engine-version.hpp.in
compiler/Engines/template-engine/: CMakeLists.txt
compiler/Engines/template-engine/generic/include/: AtomExportDataItf.hpp  AtomExportPortItf.hpp  AtomItf.hpp  ComponentItf.hpp  CompoundItf.hpp  ConnectorItf.hpp  InteractionValueItf.hpp  NonOneSafePetriNetErrorItf.hpp  PortValueItf.hpp  PriorityItf.hpp  bip-interface.hpp  bip-types.hpp
compiler/Engines/template-engine/generic/src/: AtomExportDataItf.cpp  AtomExportPortItf.cpp  AtomItf.cpp  BipErrorItf.cpp  ConnectorItf.cpp  NonOneSafePetriNetErrorItf.cpp  PortValueItf.cpp  QuotedPortReferenceItf.cpp
compiler/Engines/template-engine/specific/include/: Atom.hpp  AtomExportData.hpp  AtomExportPort.hpp  AtomInternalPort.hpp  BipError.hpp  Component.hpp  Compound.hpp  CompoundExportPort.hpp  Connector.hpp  ConnectorExportPort.hpp  CycleInAtomPrioritiesError.hpp  Data.hpp  Interaction.hpp  InteractionValue.hpp  Port.hpp  PortValue.hpp  Priority.hpp
compiler/Engines/template-engine/specific/src/: Atom.cpp  AtomExportData.cpp  AtomExportPort.cpp  AtomInternalPort.cpp  Component.cpp  Compound.cpp  CompoundExportPort.cpp  Connector.cpp  ConnectorExportPort.cpp  Data.cpp  Interaction.cpp  InteractionValue.cpp  Port.cpp  PortValue.cpp  Priority.cpp  main.cpp
compiler/Engines/ujf.verimag.bip.engines.generator/: .classpath  .project
compiler/Tools/: .gitattributes  bip2-test.sh
compiler/Tools/bench/: scheduler.sh
compiler/Tools/emacs/: bip-mode.el
compiler/Tools/helper-scripts/: add-to-tests.sh  auto-bip-javadoc.sh  batch-compiler.sh  bipc-eclipse  checkout-compile-test.sh  checkout.sh  clean-nightly.sh  daily-builder.sh  filter-test-to-text.sh  publish-online.sh  rbipc.py
compiler/Tools/migration/: extract_to_c.py  migrate.py  rewrite_fcall.py
compiler/Tools/svn/: post-commit
compiler/Tools/trac/: trac.ini
compiler/distribution/: .gitattributes  .gitignore  build.properties  build.xml  common.xml  configurations.xml  setenv.sh  single-archive-dist.sh  wrap.sh
docs/: bip-semantics.tex
resources/: genFischer.awk
(+1183 files in other folders)
